# challenge2_gazebo

./: CMakeLists.txt  README.md  package.xml
models/sample_box/: box.config  box.sdf
scripts/: spawn.py
